responsive darkmode align problem solved

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -150,7 +150,7 @@ body{
   }
   @media only screen and (max-width: 500px){
     body {
-        .darkmode_btn{
+        .darkmode_container{
             margin: 10px auto 0px auto;
         }
     }
